add pytest to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,14 @@ repos:
       require_serial: true
       pass_filenames: false  # Tells pre-commit to check the whole project
       always_run: true       # Forces the hook to run on every commit
+
+- repo: local
+  hooks:
+    - id: pytest
+      name: pytest
+      entry: pytest
+      language: system
+      types: [python]
+      require_serial: true
+      pass_filenames: false  # Tells pre-commit to check the whole project
+      always_run: true       # Forces the hook to run on every commit
