--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
   hooks:
     - id: pytest
       name: pytest
-      entry: pytest
+      entry: pytest -k tests
       language: system
       types: [python]
       require_serial: true
