use pytest picked to run only necessary test

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,7 +34,7 @@ repos:
   hooks:
     - id: pytest
       name: pytest
-      entry: pytest -k tests
+      entry: pytest --picked
       language: system
       types: [python]
       require_serial: true
