--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "ty>=0.0.18",
     "matplotlib>=3.10.8",
     "pandas>=2.3.3",
+    "pytest-picked>=0.5.1",
+    "pytest-custom-exit-code>=0.3.0",
 ]
 
 [build-system]
@@ -83,7 +85,7 @@ unfixable = []
 ignore = ["E731"]
 
 [tool.pytest]
-addopts = ["--verbose", "-s"]
+addopts = ["--verbose", "-s", "--suppress-no-test-exit-code"]
 testpaths = ["tests", "benchmark"]
 python_files = ["test_*", "bench_*"]
 python_functions = ["test_*", "bench_*"]
